--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <section class="container">
     <article>
-      <h1 class="heading">Learn to code by watching others</h1>
+      <h2 class="heading">Learn to code by watching others</h2>
       <p>See how experienced developer solve problems in real-time. Watching script tutorials is great, but understanding how developers think is invaluables.</p>
     </article>
 
@@ -24,7 +24,7 @@
         <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
       </div>
       
-      <form action="" name="form-register" onsubmit="return checkInput();">
+      <form action="#" name="form-register" onsubmit="return checkInput();">
         <div class="field">
           <input class="input-form" type="text" id="firstname" name="firstname" placeholder="First Name">
           <label for="firstname">First Name cannot be empty</label>
