--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
       </div>
       
-      <form action="#" name="form-register" onsubmit="return checkInput();">
+      <form action="#" name="form-register">
         <div class="field">
           <input class="input-form" type="text" id="firstname" name="firstname" placeholder="First Name">
           <label for="firstname">First Name cannot be empty</label>
